# test-infra

prow/external-plugins/go-build-release/: BUILD.bazel  main.go
prow/external-plugins/go-build-release/plugin/: plugin.go
